# Wikipedia_Quality_Estimation

./: .gitignore  README.md  create_model_config.py  create_text_file.py  download_data_and_collect_per_doc_stats.py  hydra_debug.py  partition.py  pyproject.toml  requirements.txt  run.sh  run.slurm  run_mlm.py  stats.ipynb  train_wiki_tokenizer.py
config/as/: config.json  config_deberta.json
config/experiment/: as_testing_charbudget.yaml  cl_argument_debug.yaml  debug.yaml  debugger.yaml  finetune.yaml  full_pipeline.yaml  import_test.yaml  make_master_wiki.yaml  make_partitioned_wiki.yaml  make_partitioned_wiki_high.yaml  make_partitioned_wiki_low.yaml  make_pre_filtered_wiki.yaml  new_config_test.yaml  pretrain_all.high_quality.yaml  pretrain_all.low_quality.yaml  pretrain_length.low_quality_100.yaml  pretrain_length.low_quality_150.yaml  pretrain_pre_filtered.yaml  pretrain_pre_filtered_100.yaml  pretrain_pre_filtered_150.yaml  pretrain_pre_filtered_50.yaml  pretrain_raw_wiki.yaml  pretrain_raw_wiki_ak.yaml  pretrain_raw_wiki_lr.yaml  pretrain_raw_wiki_lr_8.yaml  pretrain_unique_trigrams.low_quality_100.yaml  raw_wiki_lr.yaml  sample.yaml  train_tokenizer.yaml
config/tokenizer/: ulm.json
data/: iso2_map.json  polyglot_supported_langs.txt  spacy_tokenizer_available.txt  valid_glotlid_labels.json  vocab_stats.tsv  wiki_stats_official.csv  wiki_stats_official.tsv
docs/: finetune.md  metrics.md  pretrain.md  slurm.md  tokenizer.md
notebooks/: stats.ipynb
scripts/: baseline.py  create_all_methods_partition.py  create_finetuning_datasets.py  create_model_config.py  create_text_file.py  data_analysis.py  evaluate.py  evaluate_llama.py  fertility.py  final_scores.csv  get_pre_filter_stats.py  hydra_debug.py  lm-eval-plot.ipynb  partition.py  process_results.py  push_to_hub.py  run_mlm.py  run_stats.py  save_tokenizer.py  set_up_datasets_and_tokenizer.py  sib200.csv  stats.py  xlm-r-sib200-results.csv  xlmr-eval.py  xlmr-plots.ipynb  xlmr-pretrain.py
slurm/: data.sh  finetune_a100.slurm  finetune_h100.slurm  pretrain_a100.slurm  pretrain_h100.slurm  run.sh  run_exps.sh
src/wqe/: __init__.py  run_experiment.py  run_experiment_cl.py
stats/as/: article_length.csv  english_chars.csv  mean_word_length.csv  total_trigrams.csv  unique_subword_counts.csv  unique_word_counts.csv
stats/pcm/: article_length.csv  mean_word_length.csv  total_trigrams.csv  unique_subword_counts.csv  (+1 more)
tokenizers/: wiki.as.json  wiki.pcm.json  wiki.ur.json
wqe/: run_experiment.py
(+149 files in other folders)
